fix layout shift when opening certain components

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
+body {
   overflow-y: scroll;
 }
 
